--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ margin: 0.2em;
       <h2>Projects</h2>
       <ul>
         <li>
-          <strong> <a href="https://nikhil-tiwari1419.github.io/Niksify.com/">Niksify.com </a>- music player website </strong><br>
+          <strong> <a href="https://nikhil-tiwari1419.github.io/Niksify.com/">Niksify.com - music player website</a> </strong> <br>
           Built a stylish music player website using HTML, CSS, and JavaScript.<br />
           Features custom audio controls and responsive design for all devices.
         </li>
